# LUT-PIRANA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  calc_m.py
header/: LowMC.h  batchpirclient.h  batchpirparams.h  batchpirserver.h  client.h  database_constants.h  pirparams.h  server.h  utils.h
src/: LowMC.cpp  batchpirclient.cpp  batchpirparams.cpp  batchpirserver.cpp  client.cpp  main.cpp  pirparams.cpp  server.cpp  utils.cpp  utils.h
